src/test/ui/type/issue-51626.stderr
error: the trait bound `T: Trait` is not satisfied
  --> $DIR/issue-51626.rs:19:25
   |
LL | pub type Bar<T = Qux> = Foo<T>;
   |                         ^^^^^^ the trait `Trait` is not implemented for `T`
   |
note: lint level defined here
  --> $DIR/issue-51626.rs:11:9
   |
LL | #![deny(type_alias_missing_bounds)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding a `where T: Trait` bound
   = help: missing bounds in type aliases were previously allowed
   = help: this is a hard error in Rust 2018

error: the trait bound `Qux: Trait` is not satisfied
  --> $DIR/issue-51626.rs:22:1
   |
LL | pub type Baz<T: Trait = Qux> = Foo<T>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `Qux`
   |
   = help: missing bounds in type aliases were previously allowed
   = help: this is a hard error in Rust 2018

error: aborting due to 2 previous errors

